--- a/WordStatistics/nbproject/private/private.properties
+++ b/WordStatistics/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/xorigin/.netbeans/12.2/build.properties
+user.properties.file=/home/auryo21/.netbeans/12.6/build.properties
